--- a/about/styless.css
+++ b/about/styless.css
@@ -7,6 +7,9 @@
 body{
     background:#02b8c8 ;
 }
+h1 {
+    text-align: center;
+}
 .contact-us{
     width: 250px;
     background: #fff;
@@ -25,6 +28,8 @@ color: #02b8c8;
 .form,
 .form-items{
     width: 100%;
+    position: absolute;
+    left: -10px;
 }
 .form-items .input{
     width: 100%;
@@ -59,8 +64,6 @@ color: #02b8c8;
 
      .btn :hover{
          background-color: rgb(55, 199, 209);
-     }
-    
 }
 
 .btn .fas{
@@ -84,6 +87,7 @@ color: #02b8c8;
     width: 200px;
     display:flex;
     justify-content: space-around;
+    align-items: right;
 }
 
 .social-icons div{
